Analysis code refinement

--- a/script_analysis/data_exploratory_analysis.ipynb
+++ b/script_analysis/data_exploratory_analysis.ipynb
@@ -10,14 +10,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "43b2b1ee",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd \n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
     "\n",
     "df = pd.read_csv('../cleaned_data/cleaned_transactions.csv')"
    ]
@@ -679,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "id": "3ae9242d",
    "metadata": {},
    "outputs": [
@@ -729,18 +727,6 @@
        "      <td>18555.55</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>131</th>\n",
-       "      <td>OLDER FAMILIES - Budget</td>\n",
-       "      <td>Pringles</td>\n",
-       "      <td>14300.50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>132</th>\n",
-       "      <td>OLDER FAMILIES - Budget</td>\n",
-       "      <td>RRD</td>\n",
-       "      <td>9379.20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>269</th>\n",
        "      <td>RETIREES - Mainstream</td>\n",
        "      <td>Kettle</td>\n",
@@ -757,18 +743,6 @@
        "      <td>RETIREES - Mainstream</td>\n",
        "      <td>Smiths</td>\n",
        "      <td>16287.60</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>271</th>\n",
-       "      <td>RETIREES - Mainstream</td>\n",
-       "      <td>Pringles</td>\n",
-       "      <td>14781.50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>268</th>\n",
-       "      <td>RETIREES - Mainstream</td>\n",
-       "      <td>Infuzions</td>\n",
-       "      <td>8186.20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>309</th>\n",
@@ -789,18 +763,6 @@
        "      <td>16078.05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>311</th>\n",
-       "      <td>YOUNG FAMILIES - Budget</td>\n",
-       "      <td>Pringles</td>\n",
-       "      <td>12065.70</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>312</th>\n",
-       "      <td>YOUNG FAMILIES - Budget</td>\n",
-       "      <td>RRD</td>\n",
-       "      <td>7455.30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>389</th>\n",
        "      <td>YOUNG SINGLES/COUPLES - Mainstream</td>\n",
        "      <td>Kettle</td>\n",
@@ -818,53 +780,33 @@
        "      <td>Pringles</td>\n",
        "      <td>16006.20</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>393</th>\n",
-       "      <td>YOUNG SINGLES/COUPLES - Mainstream</td>\n",
-       "      <td>Smiths</td>\n",
-       "      <td>14620.90</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>388</th>\n",
-       "      <td>YOUNG SINGLES/COUPLES - Mainstream</td>\n",
-       "      <td>Infuzions</td>\n",
-       "      <td>8749.40</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                           SEGMENT_NAME      BRAND  TOT_SALES\n",
-       "129             OLDER FAMILIES - Budget     Kettle   32058.00\n",
-       "133             OLDER FAMILIES - Budget     Smiths   20150.90\n",
-       "125             OLDER FAMILIES - Budget    Doritos   18555.55\n",
-       "131             OLDER FAMILIES - Budget   Pringles   14300.50\n",
-       "132             OLDER FAMILIES - Budget        RRD    9379.20\n",
-       "269               RETIREES - Mainstream     Kettle   31652.40\n",
-       "265               RETIREES - Mainstream    Doritos   18531.55\n",
-       "273               RETIREES - Mainstream     Smiths   16287.60\n",
-       "271               RETIREES - Mainstream   Pringles   14781.50\n",
-       "268               RETIREES - Mainstream  Infuzions    8186.20\n",
-       "309             YOUNG FAMILIES - Budget     Kettle   26369.60\n",
-       "313             YOUNG FAMILIES - Budget     Smiths   16171.80\n",
-       "305             YOUNG FAMILIES - Budget    Doritos   16078.05\n",
-       "311             YOUNG FAMILIES - Budget   Pringles   12065.70\n",
-       "312             YOUNG FAMILIES - Budget        RRD    7455.30\n",
-       "389  YOUNG SINGLES/COUPLES - Mainstream     Kettle   35423.60\n",
-       "385  YOUNG SINGLES/COUPLES - Mainstream    Doritos   20925.90\n",
-       "391  YOUNG SINGLES/COUPLES - Mainstream   Pringles   16006.20\n",
-       "393  YOUNG SINGLES/COUPLES - Mainstream     Smiths   14620.90\n",
-       "388  YOUNG SINGLES/COUPLES - Mainstream  Infuzions    8749.40"
+       "                           SEGMENT_NAME     BRAND  TOT_SALES\n",
+       "129             OLDER FAMILIES - Budget    Kettle   32058.00\n",
+       "133             OLDER FAMILIES - Budget    Smiths   20150.90\n",
+       "125             OLDER FAMILIES - Budget   Doritos   18555.55\n",
+       "269               RETIREES - Mainstream    Kettle   31652.40\n",
+       "265               RETIREES - Mainstream   Doritos   18531.55\n",
+       "273               RETIREES - Mainstream    Smiths   16287.60\n",
+       "309             YOUNG FAMILIES - Budget    Kettle   26369.60\n",
+       "313             YOUNG FAMILIES - Budget    Smiths   16171.80\n",
+       "305             YOUNG FAMILIES - Budget   Doritos   16078.05\n",
+       "389  YOUNG SINGLES/COUPLES - Mainstream    Kettle   35423.60\n",
+       "385  YOUNG SINGLES/COUPLES - Mainstream   Doritos   20925.90\n",
+       "391  YOUNG SINGLES/COUPLES - Mainstream  Pringles   16006.20"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "top_5_brands_each_segment = brand_sales_high_value.groupby('SEGMENT_NAME').head(5)\n",
+    "top_5_brands_each_segment = brand_sales_high_value.groupby('SEGMENT_NAME').head(3)\n",
     "top_5_brands_each_segment"
    ]
   },
@@ -879,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "id": "97c8532c",
    "metadata": {},
    "outputs": [
@@ -929,18 +871,6 @@
        "      <td>3953</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>131</th>\n",
-       "      <td>OLDER FAMILIES - Budget</td>\n",
-       "      <td>Pringles</td>\n",
-       "      <td>3865</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>132</th>\n",
-       "      <td>OLDER FAMILIES - Budget</td>\n",
-       "      <td>RRD</td>\n",
-       "      <td>3314</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>269</th>\n",
        "      <td>RETIREES - Mainstream</td>\n",
        "      <td>Kettle</td>\n",
@@ -957,18 +887,6 @@
        "      <td>RETIREES - Mainstream</td>\n",
        "      <td>Pringles</td>\n",
        "      <td>3995</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>265</th>\n",
-       "      <td>RETIREES - Mainstream</td>\n",
-       "      <td>Doritos</td>\n",
-       "      <td>3974</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>275</th>\n",
-       "      <td>RETIREES - Mainstream</td>\n",
-       "      <td>Thins</td>\n",
-       "      <td>2279</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>309</th>\n",
@@ -989,18 +907,6 @@
        "      <td>3442</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>311</th>\n",
-       "      <td>YOUNG FAMILIES - Budget</td>\n",
-       "      <td>Pringles</td>\n",
-       "      <td>3261</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>312</th>\n",
-       "      <td>YOUNG FAMILIES - Budget</td>\n",
-       "      <td>RRD</td>\n",
-       "      <td>2627</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>389</th>\n",
        "      <td>YOUNG SINGLES/COUPLES - Mainstream</td>\n",
        "      <td>Kettle</td>\n",
@@ -1018,47 +924,27 @@
        "      <td>Pringles</td>\n",
        "      <td>4326</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>393</th>\n",
-       "      <td>YOUNG SINGLES/COUPLES - Mainstream</td>\n",
-       "      <td>Smiths</td>\n",
-       "      <td>3361</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>388</th>\n",
-       "      <td>YOUNG SINGLES/COUPLES - Mainstream</td>\n",
-       "      <td>Infuzions</td>\n",
-       "      <td>2343</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                           SEGMENT_NAME      BRAND  PROD_QTY\n",
-       "129             OLDER FAMILIES - Budget     Kettle      6492\n",
-       "133             OLDER FAMILIES - Budget     Smiths      5422\n",
-       "125             OLDER FAMILIES - Budget    Doritos      3953\n",
-       "131             OLDER FAMILIES - Budget   Pringles      3865\n",
-       "132             OLDER FAMILIES - Budget        RRD      3314\n",
-       "269               RETIREES - Mainstream     Kettle      6428\n",
-       "273               RETIREES - Mainstream     Smiths      4233\n",
-       "271               RETIREES - Mainstream   Pringles      3995\n",
-       "265               RETIREES - Mainstream    Doritos      3974\n",
-       "275               RETIREES - Mainstream      Thins      2279\n",
-       "309             YOUNG FAMILIES - Budget     Kettle      5328\n",
-       "313             YOUNG FAMILIES - Budget     Smiths      4322\n",
-       "305             YOUNG FAMILIES - Budget    Doritos      3442\n",
-       "311             YOUNG FAMILIES - Budget   Pringles      3261\n",
-       "312             YOUNG FAMILIES - Budget        RRD      2627\n",
-       "389  YOUNG SINGLES/COUPLES - Mainstream     Kettle      7172\n",
-       "385  YOUNG SINGLES/COUPLES - Mainstream    Doritos      4447\n",
-       "391  YOUNG SINGLES/COUPLES - Mainstream   Pringles      4326\n",
-       "393  YOUNG SINGLES/COUPLES - Mainstream     Smiths      3361\n",
-       "388  YOUNG SINGLES/COUPLES - Mainstream  Infuzions      2343"
+       "                           SEGMENT_NAME     BRAND  PROD_QTY\n",
+       "129             OLDER FAMILIES - Budget    Kettle      6492\n",
+       "133             OLDER FAMILIES - Budget    Smiths      5422\n",
+       "125             OLDER FAMILIES - Budget   Doritos      3953\n",
+       "269               RETIREES - Mainstream    Kettle      6428\n",
+       "273               RETIREES - Mainstream    Smiths      4233\n",
+       "271               RETIREES - Mainstream  Pringles      3995\n",
+       "309             YOUNG FAMILIES - Budget    Kettle      5328\n",
+       "313             YOUNG FAMILIES - Budget    Smiths      4322\n",
+       "305             YOUNG FAMILIES - Budget   Doritos      3442\n",
+       "389  YOUNG SINGLES/COUPLES - Mainstream    Kettle      7172\n",
+       "385  YOUNG SINGLES/COUPLES - Mainstream   Doritos      4447\n",
+       "391  YOUNG SINGLES/COUPLES - Mainstream  Pringles      4326"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1068,7 +954,7 @@
     "brand_volume_high_value = brand_volume[brand_volume['SEGMENT_NAME'].isin(high_value_segments)]\n",
     "\n",
     "brand_volume_high_value = brand_volume_high_value.sort_values(['SEGMENT_NAME','PROD_QTY'], ascending=[True, False])\n",
-    "most_bought_brand_each_segment = brand_volume_high_value.groupby('SEGMENT_NAME').head(5)\n",
+    "most_bought_brand_each_segment = brand_volume_high_value.groupby('SEGMENT_NAME').head(3)\n",
     "most_bought_brand_each_segment"
    ]
   },
@@ -1078,132 +964,6 @@
    "metadata": {},
    "source": [
     "## Pack size preferences by segment"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "dac6352e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>DATE</th>\n",
-       "      <th>STORE_NBR</th>\n",
-       "      <th>LYLTY_CARD_NBR</th>\n",
-       "      <th>TXN_ID</th>\n",
-       "      <th>PROD_NBR</th>\n",
-       "      <th>PROD_NAME</th>\n",
-       "      <th>PROD_QTY</th>\n",
-       "      <th>TOT_SALES</th>\n",
-       "      <th>PACK_SIZE</th>\n",
-       "      <th>BRAND</th>\n",
-       "      <th>LIFESTAGE</th>\n",
-       "      <th>PREMIUM_CUSTOMER</th>\n",
-       "      <th>SEGMENT_NAME</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2018-10-17</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Natural Chip        Compny SeaSalt175g</td>\n",
-       "      <td>2</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>175.0</td>\n",
-       "      <td>NCC</td>\n",
-       "      <td>YOUNG SINGLES/COUPLES</td>\n",
-       "      <td>Premium</td>\n",
-       "      <td>YOUNG SINGLES/COUPLES - Premium</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2019-05-14</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1307</td>\n",
-       "      <td>348</td>\n",
-       "      <td>66</td>\n",
-       "      <td>CCs Nacho Cheese    175g</td>\n",
-       "      <td>3</td>\n",
-       "      <td>6.3</td>\n",
-       "      <td>175.0</td>\n",
-       "      <td>CCs</td>\n",
-       "      <td>MIDAGE SINGLES/COUPLES</td>\n",
-       "      <td>Budget</td>\n",
-       "      <td>MIDAGE SINGLES/COUPLES - Budget</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2019-05-20</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1343</td>\n",
-       "      <td>383</td>\n",
-       "      <td>61</td>\n",
-       "      <td>Smiths Crinkle Cut  Chips Chicken 170g</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2.9</td>\n",
-       "      <td>170.0</td>\n",
-       "      <td>Smiths</td>\n",
-       "      <td>MIDAGE SINGLES/COUPLES</td>\n",
-       "      <td>Budget</td>\n",
-       "      <td>MIDAGE SINGLES/COUPLES - Budget</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         DATE  STORE_NBR  LYLTY_CARD_NBR  TXN_ID  PROD_NBR  \\\n",
-       "0  2018-10-17          1            1000       1         5   \n",
-       "1  2019-05-14          1            1307     348        66   \n",
-       "2  2019-05-20          1            1343     383        61   \n",
-       "\n",
-       "                                PROD_NAME  PROD_QTY  TOT_SALES  PACK_SIZE  \\\n",
-       "0  Natural Chip        Compny SeaSalt175g         2        6.0      175.0   \n",
-       "1                CCs Nacho Cheese    175g         3        6.3      175.0   \n",
-       "2  Smiths Crinkle Cut  Chips Chicken 170g         2        2.9      170.0   \n",
-       "\n",
-       "    BRAND               LIFESTAGE PREMIUM_CUSTOMER  \\\n",
-       "0     NCC   YOUNG SINGLES/COUPLES          Premium   \n",
-       "1     CCs  MIDAGE SINGLES/COUPLES           Budget   \n",
-       "2  Smiths  MIDAGE SINGLES/COUPLES           Budget   \n",
-       "\n",
-       "                      SEGMENT_NAME  \n",
-       "0  YOUNG SINGLES/COUPLES - Premium  \n",
-       "1  MIDAGE SINGLES/COUPLES - Budget  \n",
-       "2  MIDAGE SINGLES/COUPLES - Budget  "
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.head(3)"
    ]
   },
   {
