Directory level management

--- a/script_analysis/task_01/data_engineering.ipynb
+++ b/script_analysis/task_01/data_engineering.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "bce26b94",
    "metadata": {},
    "outputs": [
@@ -40,7 +40,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df_csv = pd.read_csv('../raw_data/QVI_purchase_behaviour.csv')\n",
+    "df_csv = pd.read_csv('../../raw_data/QVI_purchase_behaviour.csv')\n",
     "\n",
     "df_csv['PREMIUM_CUSTOMER'].value_counts(dropna=False)\n"
    ]
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "012bc65e",
    "metadata": {},
    "outputs": [
@@ -138,7 +138,7 @@
     }
    ],
    "source": [
-    "df_xlsx = pd.read_excel('../raw_data/QVI_transaction_data.xlsx')\n",
+    "df_xlsx = pd.read_excel('../../raw_data/QVI_transaction_data.xlsx')\n",
     "\n",
     "\n",
     "# Inspecting the max value being 200 in PROD_QTY during basic profiling\n",
