--- a/script_analysis/task_01/data_exploratory_analysis.ipynb
+++ b/script_analysis/task_01/data_exploratory_analysis.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "import pandas as pd \n",
     "\n",
-    "df = pd.read_csv('../cleaned_data/cleaned_transactions.csv')"
+    "df = pd.read_csv('../../cleaned_data/cleaned_transactions.csv')"
    ]
   },
   {
