Exploratory Data Analysis of Trial and Pre-trial Data initiation

--- a/script_analysis/task_02/data_profiling.ipynb
+++ b/script_analysis/task_02/data_profiling.ipynb
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "0a26861c",
    "metadata": {},
    "outputs": [
@@ -296,7 +296,7 @@
        "np.int64(1)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "b56004e1",
    "metadata": {},
    "outputs": [
@@ -317,7 +317,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "813a58c1",
    "metadata": {},
    "outputs": [
@@ -347,7 +347,7 @@
        "272"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "f8ab17d6",
    "metadata": {},
    "outputs": [],
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "ef95f080",
    "metadata": {},
    "outputs": [
@@ -539,7 +539,7 @@
        "4  WOOLWORTHS  OLDER SINGLES/COUPLES       Mainstream    2018-11  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "b214a5a5",
    "metadata": {},
    "outputs": [
@@ -708,7 +708,7 @@
        "9          1.023810  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -729,8 +729,232 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "a3ff7f62",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pre_trial_data = summary[summary['YEAR_MONTH'] < '2019-02']\n",
+    "\n",
+    "store_avg_data = pre_trial_data.groupby('STORE_NBR').agg(\n",
+    "    AVG_MONTHLY_SALES = ('SALES_REVENUE', 'mean'),\n",
+    "    AVG_CUSTOMER_FLOW = ('CUSTOMER_COUNT', 'mean'),\n",
+    "    AVG_TXN_PER_CUSTOMER = ('TXN_PER_CUSTOMER', 'mean')\n",
+    ").reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "aa24849a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trial_stores = [77, 86, 88]\n",
+    "\n",
+    "trial_store_data = store_avg_data[store_avg_data['STORE_NBR'].isin(trial_stores)]\n",
+    "\n",
+    "control_store_candidates = store_avg_data[~store_avg_data['STORE_NBR'].isin(trial_stores)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "189cfa14",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Date range of data is from 2018-07-01 00:00:00 to 2019-06-30 00:00:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "# months of trial\n",
+    "\n",
+    "print(f\"Date range of data is from {df['DATE'].min()} to {df['DATE'].max()}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dad57284",
+   "metadata": {},
+   "source": [
+    "> The trial ran from February 2019 to June 2019. A total of 5 full months."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "afdf25cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>STORE_NBR</th>\n",
+       "      <th>AVG_MONTHLY_SALES</th>\n",
+       "      <th>AVG_CUSTOMER_FLOW</th>\n",
+       "      <th>AVG_TXN_PER_CUSTOMER</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>76</th>\n",
+       "      <td>77</td>\n",
+       "      <td>242.714286</td>\n",
+       "      <td>42.714286</td>\n",
+       "      <td>1.057898</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85</th>\n",
+       "      <td>86</td>\n",
+       "      <td>874.264286</td>\n",
+       "      <td>99.571429</td>\n",
+       "      <td>1.256935</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>87</th>\n",
+       "      <td>88</td>\n",
+       "      <td>1340.514286</td>\n",
+       "      <td>125.714286</td>\n",
+       "      <td>1.217688</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    STORE_NBR  AVG_MONTHLY_SALES  AVG_CUSTOMER_FLOW  AVG_TXN_PER_CUSTOMER\n",
+       "76         77         242.714286          42.714286              1.057898\n",
+       "85         86         874.264286          99.571429              1.256935\n",
+       "87         88        1340.514286         125.714286              1.217688"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trial_store_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "b86ede76",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>STORE_NBR</th>\n",
+       "      <th>AVG_MONTHLY_SALES</th>\n",
+       "      <th>AVG_CUSTOMER_FLOW</th>\n",
+       "      <th>AVG_TXN_PER_CUSTOMER</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>198.128571</td>\n",
+       "      <td>45.285714</td>\n",
+       "      <td>1.046852</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>161.214286</td>\n",
+       "      <td>38.857143</td>\n",
+       "      <td>1.051386</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1075.164286</td>\n",
+       "      <td>106.285714</td>\n",
+       "      <td>1.172833</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1303.857143</td>\n",
+       "      <td>121.285714</td>\n",
+       "      <td>1.219322</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>819.957143</td>\n",
+       "      <td>93.000000</td>\n",
+       "      <td>1.255987</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   STORE_NBR  AVG_MONTHLY_SALES  AVG_CUSTOMER_FLOW  AVG_TXN_PER_CUSTOMER\n",
+       "0          1         198.128571          45.285714              1.046852\n",
+       "1          2         161.214286          38.857143              1.051386\n",
+       "2          3        1075.164286         106.285714              1.172833\n",
+       "3          4        1303.857143         121.285714              1.219322\n",
+       "4          5         819.957143          93.000000              1.255987"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "control_store_candidates.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c92769f4",
    "metadata": {},
    "outputs": [],
    "source": []
