Correlation Calculation for Control Stores Identification Completed

--- a/script_analysis/task_02/data_profiling.ipynb
+++ b/script_analysis/task_02/data_profiling.ipynb
@@ -952,9 +952,185 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c92769f4",
+   "metadata": {},
+   "source": [
+    "## Correlation Calculation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "d7ee0341",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>STORE_NBR</th>\n",
+       "      <th>YEAR_MONTH</th>\n",
+       "      <th>SALES_REVENUE</th>\n",
+       "      <th>CUSTOMER_COUNT</th>\n",
+       "      <th>TOTAL_TXN</th>\n",
+       "      <th>TXN_PER_CUSTOMER</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2018-07</td>\n",
+       "      <td>206.9</td>\n",
+       "      <td>49</td>\n",
+       "      <td>52</td>\n",
+       "      <td>1.061224</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2018-08</td>\n",
+       "      <td>176.1</td>\n",
+       "      <td>42</td>\n",
+       "      <td>43</td>\n",
+       "      <td>1.023810</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2018-09</td>\n",
+       "      <td>278.8</td>\n",
+       "      <td>59</td>\n",
+       "      <td>62</td>\n",
+       "      <td>1.050847</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2018-10</td>\n",
+       "      <td>188.1</td>\n",
+       "      <td>44</td>\n",
+       "      <td>45</td>\n",
+       "      <td>1.022727</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2018-11</td>\n",
+       "      <td>192.6</td>\n",
+       "      <td>46</td>\n",
+       "      <td>47</td>\n",
+       "      <td>1.021739</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   STORE_NBR YEAR_MONTH  SALES_REVENUE  CUSTOMER_COUNT  TOTAL_TXN  \\\n",
+       "0          1    2018-07          206.9              49         52   \n",
+       "1          1    2018-08          176.1              42         43   \n",
+       "2          1    2018-09          278.8              59         62   \n",
+       "3          1    2018-10          188.1              44         45   \n",
+       "4          1    2018-11          192.6              46         47   \n",
+       "\n",
+       "   TXN_PER_CUSTOMER  \n",
+       "0          1.061224  \n",
+       "1          1.023810  \n",
+       "2          1.050847  \n",
+       "3          1.022727  \n",
+       "4          1.021739  "
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pre_trial_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "6aa363d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time_series_sales = pre_trial_data.pivot(\n",
+    "    index= 'STORE_NBR',\n",
+    "    columns= 'YEAR_MONTH',\n",
+    "    values= 'SALES_REVENUE'\n",
+    ")\n",
+    "\n",
+    "time_series_customers = pre_trial_data.pivot(\n",
+    "    index='STORE_NBR',\n",
+    "    columns='YEAR_MONTH',\n",
+    "    values='CUSTOMER_COUNT'\n",
+    ")\n",
+    "\n",
+    "time_series_txn = pre_trial_data.pivot(\n",
+    "    index='STORE_NBR',\n",
+    "    columns='YEAR_MONTH',\n",
+    "    values='TXN_PER_CUSTOMER'\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "8a12d97d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def corr_calculation():\n",
+    "\n",
+    "    results = {}\n",
+    "\n",
+    "    for store in trial_stores:\n",
+    "        corr_sales = time_series_sales.T.corr()[store]\n",
+    "        corr_customers = time_series_customers.T.corr()[store]\n",
+    "        corr_txn = time_series_txn.T.corr()[store]\n",
+    "\n",
+    "        avg_corr = (corr_sales + corr_customers + corr_txn) / 3\n",
+    "\n",
+    "        avg_corr = avg_corr.drop(store) #removing correlation done with itself\n",
+    "        results[store] = avg_corr.sort_values(ascending=False).head(3) #top 3 match\n",
+    "\n",
+    "    return results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "947279b9",
+   "metadata": {},
+   "source": [
+    "## Magnitude Distance Calculation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c92769f4",
+   "id": "ae6087fe",
    "metadata": {},
    "outputs": [],
    "source": []
