Magnitude Distance Calculation for Control Stores Completed

--- a/script_analysis/task_02/data_profiling.ipynb
+++ b/script_analysis/task_02/data_profiling.ipynb
@@ -1129,10 +1129,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "ae6087fe",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "def mag_distance():\n",
+    "\n",
+    "    results = {}\n",
+    "\n",
+    "    metrics_df = store_avg_data[['STORE_NBR', 'AVG_MONTHLY_SALES', 'AVG_CUSTOMER_FLOW', 'AVG_TXN_PER_CUSTOMER']].set_index('STORE_NBR')\n",
+    "\n",
+    "    scaler = StandardScaler()\n",
+    "\n",
+    "    metrics_scaled = pd.DataFrame(\n",
+    "        scaler.fit_transform(metrics_df),\n",
+    "        index= metrics_df.index,\n",
+    "        columns= metrics_df.columns\n",
+    "    )\n",
+    "\n",
+    "    for store in trial_stores:\n",
+    "        distances = ((metrics_scaled - metrics_scaled.loc[store]).abs()).drop(store)\n",
+    "\n",
+    "        results[store] = distances.nsmallest(3)\n",
+    "\n",
+    "    return results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73a4aeba",
+   "metadata": {},
+   "source": [
+    "## Finding Control Stores"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f8aab9a",
+   "metadata": {},
    "source": []
   }
  ],
