Correlation and Magnitude Distance of Trial Stores Calculated

--- a/script_analysis/task_02/data_profiling.ipynb
+++ b/script_analysis/task_02/data_profiling.ipynb
@@ -1129,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 42,
    "id": "ae6087fe",
    "metadata": {},
    "outputs": [],
@@ -1151,7 +1151,9 @@
     "    )\n",
     "\n",
     "    for store in trial_stores:\n",
-    "        distances = ((metrics_scaled - metrics_scaled.loc[store]).abs()).drop(store)\n",
+    "        distances = ((metrics_scaled - metrics_scaled.loc[store]).abs()).sum(axis=1)\n",
+    "\n",
+    "        distances = distances.drop(store)\n",
     "\n",
     "        results[store] = distances.nsmallest(3)\n",
     "\n",
@@ -1167,9 +1169,110 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 38,
    "id": "9f8aab9a",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{77: STORE_NBR\n",
+       " 119    0.884487\n",
+       " 162    0.679224\n",
+       " 3      0.671123\n",
+       " Name: 77, dtype: float64,\n",
+       " 86: STORE_NBR\n",
+       " 138    0.684236\n",
+       " 22     0.677147\n",
+       " 240    0.670384\n",
+       " Name: 86, dtype: float64,\n",
+       " 88: STORE_NBR\n",
+       " 178    0.668217\n",
+       " 113    0.638066\n",
+       " 201    0.570582\n",
+       " Name: 88, dtype: float64}"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result = corr_calculation()\n",
+    "\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "f09434ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{77: STORE_NBR\n",
+       " 268    0.117191\n",
+       " 265    0.144768\n",
+       " 90     0.159700\n",
+       " dtype: float64,\n",
+       " 86: STORE_NBR\n",
+       " 225    0.054187\n",
+       " 207    0.058157\n",
+       " 57     0.060850\n",
+       " dtype: float64,\n",
+       " 88: STORE_NBR\n",
+       " 237    0.145719\n",
+       " 4      0.226328\n",
+       " 165    0.248236\n",
+       " dtype: float64}"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result = mag_distance()\n",
+    "\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e628a64a",
+   "metadata": {},
+   "source": [
+    "This data implies the following:\n",
+    "\n",
+    "- Some stores have similar trends but operate at different scales\n",
+    "- Some stores have similar scale but different trends\n",
+    "\n",
+    "\n",
+    "A good Control Store should:\n",
+    "1. Trend similarly with high correlation\n",
+    "2. Operate at similar scale with low magnitude distances\n",
+    "\n",
+    "\n",
+    "This requires to now combine the two scores and finalize Control Stores."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f04ed1c",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8cba9adc",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
